@startuml

title __DAO's Class Diagram__\n

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class BoardDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class GroupDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class MagazineDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class MessageDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class NoticeDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class UserDao {
            + select()
            + selectAll()
            + insert()
            + update()
            + delete()
        }
      }
    }
  }
  

  BoardDao -up-|> Dao
  BoardDao -up-|> Accessor
  GroupDao -up-|> Dao
  GroupDao -up-|> Accessor
  MagazineDao -up-|> Dao
  MagazineDao -up-|> Accessor
  MessageDao -up-|> Dao
  MessageDao -up-|> Accessor
  NoticeDao -up-|> Dao
  NoticeDao -up-|> Accessor
  UserDao -up-|> Dao
  UserDao -up-|> Accessor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
